bubba-frontend (1.2.4.79) claire estelle; urgency=low

  * Set/remove promisc mode on eth1 when enable disable wlan. (Tempfix)
  * Extend timeout on bubba_socket_helper.php to not fail on long executions

 -- Tor Krill <tor@excito.com>  Mon, 08 Feb 2010 21:38:54 +0100

bubba-frontend (1.2.4.78) claire estelle; urgency=low

  * remove one shutdown of dnsmasq 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 08 Feb 2010 16:17:49 +0100

bubba-frontend (1.2.4.77) claire estelle; urgency=low

  * channels 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:48:26 +0100

bubba-frontend (1.2.4.76) claire estelle; urgency=low

  * whoopsie whoopsie 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:40:05 +0100

bubba-frontend (1.2.4.75) claire estelle; urgency=low

  * admin 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:35:46 +0100

bubba-frontend (1.2.4.74) claire estelle; urgency=low

  * disabling N and A 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:33:06 +0100

bubba-frontend (1.2.4.73) claire estelle; urgency=emergency

  * disabling N 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:20:46 +0100

bubba-frontend (1.2.4.72) estelle claire; urgency=low

  * prevent usage on passive scanning channel as well 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 16:31:37 +0100

bubba-frontend (1.2.4.71) estelle claire; urgency=low

  * change init of mediatromb to 26 from 20 (Closes: #1141) 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 12:38:49 +0100

bubba-frontend (1.2.4.70) estelle claire; urgency=low

  [ Carl Fürstenberg ]
  * Handle exception from networkmanager::get_wlan_capabilities when an phy
    isn't found; Generally wlan should be disabled at this point, as this
    either is dues to a networking card isn't found at all, or that the
    running kernel is too old. (Closes: #1155)

  [ PA Nilsson ]
  * Version control of css/js files fixed for regular users (was