@@ -2,6 +2,7 @@ bubba-frontend (1.2.4.79) claire estelle; urgency=low
 
   * Set/remove promisc mode on eth1 when enable disable wlan. (Tempfix)
   * Extend timeout on bubba_socket_helper.php to not fail on long executions
+  * Fixed to disable LAN dns/gw in server mode, closes# 1168.
 
  -- Tor Krill <tor@excito.com>  Mon, 08 Feb 2010 21:38:54 +0100
 
